# St7735s

./: 2.c  CMakeLists.txt  Gps_gnss.c  README.md  appgpio.c  appgpio.h  gfx.c  gfx.h  gps_gnss.h  image.h  logs  st7735s.c  st7735s_compat.c  st7735s_compat.h
Application_code/: App.cpp  ManufacturingTest.cpp  Test.c  Test.cpp  gpiod.h  logs  t.dts  test.txt  test_2.txt
BAttery/: Battery-low - Shortcut.lnk  Battery-low-1 - Shortcut.lnk  Battery-low-2 - Shortcut.lnk
examples/: example_stm32.c
utils/fonts/: ter-u22n.bdf
